Tue Oct 22 18:15:49 2002  Guy Decoux  <ts@moulon.inra.fr>

	* eval.c (rb_eval): local_vars[-1] should protect body, not a
	  local_tbl.

Tue Oct 22 02:31:16 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* marshal.c (w_object): check if klass is really a class.

Fri Oct 18 23:39:00 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* parse.y (value_expr0): allow return/break/next/redo/retry in rhs
	  of logical operator.  [ruby-dev:18534]

	* parse.y (remove_begin): eliminate useless NODE_BEGIN.
	  [ruby-dev:18535]

Fri Oct 18 01:25:51 2002  Akinori MUSHA  <knu@iDaemons.org>

	* hash.c, eval.c: Use (*_NSGetEnviron()) instead of environ on
	  Darwin for namespace cleanness.  [ruby-core:00537]

	* dln.c (dln_load): Fix Darwin support that has been disabled and
	  switch to using it on Darwin instead of the system dlopen().
	  [ruby-core:00541]

Thu Oct 17 15:20:11 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_eval): need to push empty varmap node only when
	  ruby_dyna_var is NULL.

Fri Oct 11 06:05:30 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* win32/win32.c (win32_fclose, win32_close): use closesocket()
	  for socket.  [ruby-win32:382]

	* win32/win32.c (StartSockets): set NtSocketsInitialized.

	* win32/win32.h: prototypes; win32_fclose, win32_close

Thu Oct 10 17:26:12 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/tcltklib/stubs.c (ruby_tcltk_stubs): fix memory leak.
	  [ruby-dev:18478]

Thu Oct 10 15:20:18 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* eval.c (ruby_init): Init_stack() with local location.
	  (ruby-bugs-ja:PR#277)

	* gc.c (Init_stack): prefer address of argument rather than local
	  variable to initialize rb_gc_stack_start.

	* lib/weakref.rb (WeakRef::@@final): use Hash#delete.

	* lib/weakref.rb (WeakRef::__getobj__): examin if alive or not by
	  ID_REV_MAP to deal with recycled object.  [ruby-dev:18472]

	* lib/weakref.rb (WeakRef::weakref_alive?): ditto.
