@@ -35,16 +35,18 @@
 #  endif
 # endif /* atarist */
 #else
-# if defined(HAVE_ALLOCA_H)
+# ifdef HAVE_ALLOCA_H
 #  include <alloca.h>
-# elif !defined(alloca)
-char *alloca();
-# endif
+# else
+#  ifdef _AIX
+ #pragma alloca
+#  else
+#   ifndef alloca /* predefined by HP cc +Olibcalls */
+void *alloca ();
+#   endif
+#  endif /* AIX */
+# endif /* HAVE_ALLOCA_H */
 #endif /* __GNUC__ */
-
-#ifdef _AIX
-#pragma alloca
-#endif
 
 #ifdef HAVE_STDARG_PROTOTYPES
 #include <stdarg.h>
